--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,3 +23,9 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+      
+  andrjob:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print my message
+        run: echo "Hello my friend"
